# linalg

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml
docs/: design.puml
linalg/: __init__.py  solution.py  vector.py
linalg/base/: any_algorithm.py  any_matrix.py  any_system.py  any_vector.py
linalg/factories/: default_algorithm.py  matrix.py  system.py
linalg/matrices/: common.py  common_square.py  common_square_matrix.py  square.py  tridiagonal.py  tridiagonal_matrix.py
linalg/systems/common/: common_system.py  common_system_algorithm.py  default_common_system_algorithm.py  gaussian_elimination.py
linalg/systems/tridiagonal_matrix/: default_tridiagonal_matrix_algorithm.py  thomas_algorithm.py  tridiagonal_matrix_algorithm.py  tridiagonal_matrix_system.py
tests/: test_solution.py  test_vector.py
tests/base/: test_any_system.py  test_any_vector.py
tests/factories/: test_default_algorithm.py  test_matrix.py  test_system.py
tests/matrices/: test_common_matrix.py  test_common_square_matrix.py  test_tridiagonal_matrix.py
tests/systems/common/: test_common_system.py
tests/systems/tridiagonal_matrix/: test_thomas_algorithm.py  test_tridiagonal_matrix_system.py
