[metadata]
name = linalg
version = attr: linalg.__version__
author = Fedor Pashin
author_email = fedorpashin@icloud.com
description = Linear algebra in object-oriented way.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fedorpashin/linalg
license = MIT License
license_file = LICENSE.txt

[options]
zip_safe = False
package_dir = = .
packages = find_namespace:
install_requires =
    final_class
    overrides
    multimethod
    numpy

[flake8]
ignore = F811, F401, F403
max-line-length = 120

[coverage:run]
source = linalg
branch = True

[coverage:report]
exclude_lines =
    @abstractmethod
    raise NotImplementedError
